tests/paczka1/fuzzy1/47473493.err
Error in line 2: aRgBT A223 53,00
Error in line 5: AK4 A1 49,8
Error in line 8: 8anNBPnb A223 70,4
Error in line 13: A672 A223 10,2
Error in line 17: A672 S543 11,9
Error in line 4: aRgBT A223 110,2
Error in line 23: aRgBT S543 18,4
Error in line 24: aRgBT A672 58,2
Error in line 34: 8anNBPnb A223 86,3
